package at.htl.model;

public enum Status {
    CREATED,
    STARTED,
    ENDED
}
