@startuml

class Group {
Long id
String name
String year
List<Student> students
}

class Student {
String matrikelNr
String firstname
String lastname
String email
Group group
}

class Poll{
Long id
String token
Survey survey
Student student
}

class Answer {
Long id
String value
Question question
}

class Question {
Long id
String questionText
QuestionType questionType
String fieldname
}

class Template {
Long id
String name
LocalDate creationDate
String mdQuestionnaire
}

class Survey {
String name
LocalDate creationDate
LocalDate endDate
Template template
}

enum Status {
CREATED
STARTED
ENDED
}

enum QuestionType {
TEXT
CHECKBOX
RADIOBOX

}


Group "*" -- "*" Student
Student "1" -- "*" Poll
Poll "*" -right- "1" Survey
Poll "1" --> "*" Answer
Survey "1" -up-> "1" Status
Survey "*" -right-> "1" Template
Template "1" --> "*" Question
Question -left- Answer
Question "1" -right- "1" QuestionType


@enduml